# hooklib

./: CMakeLists.txt  README.md
include/hooklib/: hooklib.h
src/: CMakeLists.txt  unix_patchmem.cpp  win32_patchmem.cpp
tests/: CMakeLists.txt  main.cpp
